--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "GrowID": "capcieszg",
-    "Password": "ubikntol1@",
+    "GrowID": "kakamakosako",
+    "Password": "Logout12@.",
     "Email": "zdgzcfsfs",
     "Domain": "@gmail.com",
     "Port": 17198
