--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "GrowID": "capcieszg",
-    "Password": "ubikntol1@",
-    "Email": "zdgzcfsfs",
+    "GrowID": "kaosakokoko",
+    "Password": "Logout12@.",
+    "Email": "zdsdfasdf",
     "Domain": "@gmail.com",
     "Port": 17198
 }
